<resources>
    <string name="app_name">ChatApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_logo">App Logo</string>
    <string name="log_in_button">Log in</string>
    <string name="edit_text_email">Email</string>
    <string name="edit_text_password">Password</string>
    <string name="go_to_sign_up_button">Sign Up</string>
    <string name="don_t_have_an_account_text">Don\'t have an account?   </string>
    <string name="login_to_your_account_text">Login to your account</string>
    <string name="already_got_an_account_text">Already got an account?</string>
    <string name="sign_up_title">Sign up</string>
    <string name="edit_text_name">Enter name</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="go_to_login">Login</string>
</resources>